# Evora

./: .gitignore  BUILDING.md  README.md
Doc/: Developer documentation.odt  Evora specification.odt  User guide.odt
Engine/: CMakeLists.txt
Engine/Engine/: CMakeLists.txt  Engine.cpp
Engine/Evora/: CMakeLists.txt  Evora.cpp  Evora.h
Game/: project.godot
Godot/: .gitignore  Background.gdns  Board.gdns  Board.tscn  Boards.gdns  Center.gdns  Center.tscn  ColorHighlight.gdns  Factories.gdns  Factory.tscn  Floor.gdns  GameData.gdns  GodotUI-Debug.gdnlib  Line.gdns  PatternLine.tscn  PatternLines.gdns  Points_marker.tscn  StartButton.tscn  StepButton.tscn  Tile.gdns  Tile.tscn  TileLoader.gdns  WallBgTile.gd  black-tile.jpg.import  blue-tile.jpg.import  board.jpg.import  export_presets.cfg  factory.jpg.import  main.gdns  main.tscn  points-marker.png.import  project.godot  red-tile.jpg.import  starting-player-marker.jpg.import  white-tile.jpg.import  yellow-tile.jpg.import
Godot/Textures/: black-tile.jpg.import  black-tile.png.import  blue-tile.jpg.import  blue-tile.png.import  board-background.png.import  board.jpg.import  cyan-highlight.png.import  factory-background.png.import  factory.png.import  highlight.png.import  points-marker.png.import  red-tile.jpg.import  red-tile.png.import  rounded_cyan_highlight.png.import  starter-tile.png.import  starting-player-marker.jpg.import  white-tile.jpg.import  white-tile.png.import  white.png.import  wood.jpg.import  wood.png.import  yellow-tile.jpg.import  yellow-tile.png.import
Installer/: .gitignore  Evora.nsi
Src/Evora/: Evora.sln  meson.build
Src/Evora/AzulAI/: AI.cpp  AI.h  AIFactory.cpp  AIFactory.h  AzulAI.vcxproj  AzulAI.vcxproj.filters  RandomAI.cpp  RandomAI.h  meson.build
Src/Evora/AzulControl/: AzulControl.vcxproj  AzulControl.vcxproj.filters  center_offer.cpp  command.h  factory_offer.cpp  factory_offer.h  final_score.cpp  final_score.h  game_controller.cpp  game_controller.h  init_round.cpp  init_round.h  meson.build  tally_floor.cpp  tally_floor.h  tile_wall.cpp
Src/Evora/AzulModel/: AzulModel.vcxproj  AzulModel.vcxproj.filters  Makefile  bag.cpp  bag.h  board.cpp  board.h  center.cpp  center.h  factory.cpp  factory.h  floor.cpp  floor.h  game.cpp  game.h  lid.cpp  lid.h  meson.build  pattern_line.cpp  pattern_line.h  player.cpp  player.h  tile.h  wall.cpp  wall.h
Src/Evora/ConsoleUI/: ConsoleUI.cpp  ConsoleUI.h  ConsoleUI.vcxproj  ConsoleUI.vcxproj.filters  meson.build
Src/Evora/Engine/: AI.cpp  AI.h  AIFactory.cpp  AIFactory.h  AzulGameMove.cpp  AzulGameMove.h  AzulGameState.cpp  AzulGameState.h  Bag.cpp  Bag.h  Board.cpp  Board.h  Center.cpp  Center.h  Engine.vcxproj  Engine.vcxproj.filters  Factory.cpp  Factory.h  Game.cpp  Game.h  GameMove.cpp  GameMove.h  GameState.cpp  GameState.h  GreedyAI.cpp  GreedyAI.h  Lid.cpp  Lid.h  MCTSAlgorithm.cpp  MCTSAlgorithm.h  MinimaxAI.cpp  MinimaxAI.h  MonteCarloAI.cpp  MonteCarloAI.h  Player.cpp  Player.h  RandomAI.cpp  RandomAI.h  StrategyAI.cpp  StrategyAI.h  (+100 more)
Src/Evora/Evora/: Evora.vcxproj  Evora.vcxproj.filters  GodotLibrary.cpp
Src/Evora/GodotUI/: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  BoardLoader.cpp  BoardLoader.h  Center.cpp  Center.h  ColorHighlight.cpp  ColorHighlight.h  Factory.cpp  Factory.h  FactoryLoader.cpp  FactoryLoader.h  Floor.cpp  Floor.h  GameData.cpp  GameData.h  GodotBackground.cpp  GodotBackground.h  GodotGame.cpp  GodotGame.h  GodotLibrary.cpp  GodotScenes.cpp  GodotScenes.h  GodotTile.cpp  GodotTile.h  GodotUI.vcxproj  GodotUI.vcxproj.filters  HumanPlayer.cpp  HumanPlayer.h  ObjectLoader.cpp  ObjectLoader.h  PatternLine.cpp  PatternLine.h  PatternLineLoader.cpp  PatternLineLoader.h  Player.h  Root.cpp  Root.h  (+6 more)
