engine_inc = include_directories('.')

engine_lib = static_library('engine', 
    ['AI.cpp','AIFactory.cpp','RandomAI.cpp','bag.cpp','board.cpp','center.cpp',
    'center_offer.cpp','command.cpp','factory.cpp','factory_offer.cpp','final_score.cpp',
    'score_wall_tile.cpp','floor.cpp','game.cpp','game_controller.cpp','init_round.cpp',
    'lid.cpp','pattern_line.cpp','tally_floor.cpp','tile_wall.cpp','wall.cpp'])
