engine_inc = include_directories('.')

engine_lib = static_library('engine', 
    ['AI.cpp','AIFactory.cpp','RandomAI.cpp','GreedyAI.cpp','MinimaxAI.cpp','bag.cpp','board.cpp','center.cpp',
    'center_offer.cpp','command.cpp','drop_center.cpp','drop_factory.cpp','factory.cpp',
    'factory_offer.cpp','floor.cpp','game.cpp','game_controller.cpp',
    'init_round.cpp','lid.cpp','pattern_line.cpp','score_color.cpp','score_line.cpp',
    'score_row.cpp','score_wall_tile.cpp','tally_floor.cpp','tile_wall.cpp','wall.cpp','utils.cpp'])
