engine_inc = include_directories('.')

engine_lib = static_library('engine', 
    ['ai.cpp','ai_factory.cpp','azul_game_move.cpp','azul_game_state.cpp','bag.cpp','board.cpp','center.cpp','center_offer.cpp','command.cpp','drop_center.cpp','drop_factory.cpp','factory.cpp','factory_offer.cpp','floor.cpp',
    'game.cpp','game_controller.cpp','game_move.cpp','game_state.cpp','greedy_ai.cpp','init_round.cpp','lid.cpp','mcts_algorithm.cpp','minimax_ai.cpp','monte_carlo_ai.cpp','pattern_line.cpp','random_ai.cpp','score_color.cpp',
    'score_line.cpp','score_row.cpp','score_wall_tile.cpp','strategy_ai.cpp','strategy_move.cpp','tally_floor.cpp','tile_wall.cpp','tree_node.cpp','tree_node_creator.cpp','uct_tree_node.cpp','uct_tree_node_creator.cpp','utils.cpp',
    'wall.cpp'])
