shared_library('godot_ui',

    ['Board.cpp', 'BoardLoader.cpp', 'Factory.cpp', 'FactoryLoader.cpp', 'GodotGame.cpp',
     'GodotLibrary.cpp', 'GodotTile.cpp', 'ObjectLoader.cpp', 'Root.cpp', 'TileLoader.cpp',
     'Utils.cpp','GodotScenes.cpp','PatternLine.cpp', 'PatternLineLoader.cpp', 'Player.cpp',
     'HumanPlayer.cpp', 'AIPlayer.cpp', 'GameData.cpp', 'Floor.cpp', 'Center.cpp'],

    dependencies: godot_lib,
    include_directories: [engine_inc, godot_includes],
    link_with: [engine_lib])
